just added the data service

--- a/angular_basics/src/app/app.component.html
+++ b/angular_basics/src/app/app.component.html
@@ -22,13 +22,13 @@ show the use of ngModel
 </h2>
 <div>
   <h3 style="color: {{color_red }};">This is an example of interpolation. Basically you try to display your variable value from .ts file by using the variable name inside curly brackets.</h3>
-  Title <input type="text" value="{{title}}">
+  Title123 <input type="text" value="{{title}}">
   <button (click)="userSaved()">Submit</button>
 </div>
 
 <div>  
   <h3 [style.color]="color_red">This is an example of data binding</h3>
-  Title <input type="text" [value]="title">
+  Title 321<input type="text" [value]="title">
   <button [disabled]="isDisabled">Submit</button>
 </div>
 
