--- a/angular_reactive_forms/src/app/app.component.html
+++ b/angular_reactive_forms/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 
-<app-reactive-form></app-reactive-form>
+<!-- <app-reactive-form></app-reactive-form> -->
 
 <router-outlet />
