--- a/angular_reactive_forms/src/app/navbar/navbar.component.html
+++ b/angular_reactive_forms/src/app/navbar/navbar.component.html
@@ -2,17 +2,11 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <div class="container-fluid">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" routerLink="/add_employee" routerLinkActive="active">Add Employee</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" routerLink="/employees" routerLinkActive="active">Employees</a>
         </li>
       </ul>
     </div>
