update the reactive forms with http request and updated in and out with hooks

--- a/angular_reactive_forms/src/app/employees/employees.component.html
+++ b/angular_reactive_forms/src/app/employees/employees.component.html
@@ -1,7 +1,8 @@
 <div class="container">
     <ul>
         <li *ngFor="let emp of employees">
-            <a [routerLink]="['/employees', emp.id]">{{emp.name}}</a>
+            <a [routerLink]="['/employees', emp.id]">{{ emp.name}}</a>
         </li>
     </ul>
+    <p>{{details}}</p>
 </div>
