--- a/angular_reactive_forms/src/app/reactive-form/reactive-form.component.html
+++ b/angular_reactive_forms/src/app/reactive-form/reactive-form.component.html
@@ -56,6 +56,7 @@
         </div>
 
         <button class="btn btn-primary" (click)="addEmployee()">Add Employee</button>
+        <!-- <button class="btn btn-primary" (click)="updateEmployee()">Update Employee</button> -->
 
     </form>
 </div>
