--- a/angular_reactive_forms/src/app/employees/employees.component.html
+++ b/angular_reactive_forms/src/app/employees/employees.component.html
@@ -8,8 +8,9 @@
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Email</th>
             <th scope="col">Salary</th>
             <th scope="col">Actions</th>
           </tr>
@@ -19,6 +20,7 @@
             <th scope="row">{{emp.employee_id}}</th>
             <td>{{emp.first_name}}</td>
             <td>{{emp.last_name}}</td>
+            <td>{{emp.email}}</td>
             <td>{{emp.salary}}</td>
             <td>
                 <a [routerLink]="['/add_employee', emp.employee_id]">
