--- a/angular_node_auth/src/app/signup/signup.component.html
+++ b/angular_node_auth/src/app/signup/signup.component.html
@@ -1,14 +1,12 @@
 <!-- Add a form with below input values:
 password, first_name, last_name, email  -->
-<div class="container">
+<!-- <div class="container">
     <form #signUpForm="ngForm" (ngSubmit)="signUp(signUpForm)">
-        <!-- Email input -->
         <div data-mdb-input-init class="form-outline mb-4 col-sm-3">
             <label class="form-label">Email address</label>
             <input type="email" name="email" class="form-control col-sm-3" [(ngModel)]="signUpDetails.email"/>
         </div>
 
-        <!-- Password input -->
         <div data-mdb-input-init class="form-outline mb-4 col-sm-3">
             <label class="form-label">Password</label>
             <input type="password" name="password" class="form-control col-sm-3" [(ngModel)]="signUpDetails.password"/>
@@ -30,8 +28,67 @@ password, first_name, last_name, email  -->
             <input type="text" name="last_name" class="form-control col-sm-3" [(ngModel)]="signUpDetails.last_name"/>
         </div>
 
-        <!-- Submit button -->
         <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block ms-1">Sign Up</button>
         <button type="button" [routerLink]="'/signin'" data-mdb-button-init data-mdb-ripple-init class="btn btn-warning btn-block ms-2">Cancel</button>
     </form>
-</div>
+</div> -->
+
+<section class="vh-100">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 text-black">
+
+                <div class="px-5 ms-xl-4">
+                    <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
+                    <span class="h1 fw-bold mb-0">Logo</span>
+                </div>
+
+                <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+
+                    <form style="width: 23rem;" #signUpForm="ngForm" (ngSubmit)="signUp(signUpForm)">
+
+                        <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Register</h3>
+
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <input type="email" id="form2Example18" class="form-control form-control-lg" name="email" [(ngModel)]="signUpDetails.email" />
+                            <label class="form-label" for="form2Example18">Email address</label>                
+                        </div>
+
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <input type="password" name="password" id="form2Example28" class="form-control form-control-lg" [(ngModel)]="signUpDetails.password" />
+                            <label class="form-label" for="form2Example28">Password</label>
+                        </div>
+
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <input type="password" name="confirm_password" id="form2Example28" class="form-control form-control-lg" [(ngModel)]="signUpDetails.confirm_password" />
+                            <label class="form-label" for="form2Example28">Confirm Password</label>
+                        </div>
+
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <input type="text" name="first_name" id="form2Example28" class="form-control form-control-lg" [(ngModel)]="signUpDetails.first_name" />
+                            <label class="form-label" for="form2Example28">First Name</label>
+                        </div>
+
+                        <div data-mdb-input-init class="form-outline mb-4">
+                            <input type="text" name="last_name" id="form2Example28" class="form-control form-control-lg" [(ngModel)]="signUpDetails.last_name" />
+                            <label class="form-label" for="form2Example28">Last Name</label>
+                        </div>
+
+                        <div class="pt-1 mb-4">
+                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-lg btn-block"
+                            type="submit">Sign Up</button>
+                            <button type="button" [routerLink]="'/signin'" data-mdb-button-init data-mdb-ripple-init class="btn btn-warning btn-lg btn-block ms-4">Cancel</button>
+                        </div>
+
+                    </form>
+
+                </div>
+
+            </div>
+            <div class="col-sm-6 px-0 d-none d-sm-block">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img3.webp"
+                    alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+            </div>
+        </div>
+    </div>
+</section>
