--- a/angular_node_auth/src/app/signup/signup.component.html
+++ b/angular_node_auth/src/app/signup/signup.component.html
@@ -43,6 +43,26 @@ password, first_name, last_name, email  -->
                     <span class="h1 fw-bold mb-0">Logo</span>
                 </div>
 
+                <div class="toast show ms-xl-4 mt-5 text-bg-success" *ngIf="success">
+                    <div class="toast-header">
+                      <strong class="me-auto">Success</strong>
+                      <button type="button" class="btn-close" (click)="closePopUp()"></button>
+                    </div>
+                    <div class="toast-body">
+                      <p>User created successfully!!</p>
+                    </div>
+                </div>
+
+                <div class="toast show ms-xl-4 mt-5 text-bg-danger" *ngIf="errors">
+                    <div class="toast-header">
+                      <strong class="me-auto">Errors</strong>
+                      <button type="button" class="btn-close" (click)="closePopUp()"></button>
+                    </div>
+                    <div class="toast-body" *ngIf="error_message">
+                      <p>Error Message: {{ error_message }}</p>
+                    </div>
+                </div>
+
                 <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
 
                     <form style="width: 23rem;" #signUpForm="ngForm" (ngSubmit)="signUp(signUpForm)">
@@ -75,8 +95,7 @@ password, first_name, last_name, email  -->
                         </div>
 
                         <div class="pt-1 mb-4">
-                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-lg btn-block"
-                            type="submit">Sign Up</button>
+                            <button class="btn btn-info btn-lg btn-block" type="submit">Sign Up</button>
                             <button type="button" [routerLink]="'/signin'" data-mdb-button-init data-mdb-ripple-init class="btn btn-warning btn-lg btn-block ms-4">Cancel</button>
                         </div>
 
