--- a/angular_node_auth/src/app/app.component.html
+++ b/angular_node_auth/src/app/app.component.html
@@ -1,3 +1,13 @@
-<app-navbar></app-navbar>
+<main>
+    <app-navbar></app-navbar>
+    <a routerLink="['/home']">
+        <header class="brand-name">
+            <img src="../favicon.ico" alt="">
+        </header>
+    </a>
+    <section class="content">
+       <!-- <app-home></app-home>  -->
+    </section>
+</main>
 
 <router-outlet />
